Prefer StandardCharsets.UTF_8 over "UTF_8".
PiperOrigin-RevId: 971983667
Change-Id: Ie59042e8701415c03c3ee9a6b6a469b63c27c3fa