@@ -29,7 +29,6 @@ import com.google.devtools.build.lib.vfs.FileSystemUtils;
 import com.google.devtools.build.lib.vfs.Path;
 import com.google.devtools.build.lib.vfs.PathFragment;
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.URI;
 import java.net.URLDecoder;
 import java.util.Locale;
@@ -148,9 +147,9 @@ public class VendorManager {
    *
    * @param url The URL to check.
    * @return true if the URL is vendored, false otherwise.
-   * @throws UnsupportedEncodingException if the URL decoding fails.
+   * @throws IOException if the URL decoding fails.
    */
-  public boolean isUrlVendored(URI url) throws UnsupportedEncodingException {
+  public boolean isUrlVendored(URI url) throws IOException {
     return getVendorPathForUrl(url).isFile();
   }
 
@@ -223,12 +222,16 @@ public class VendorManager {
    *
    * @param url The URL to get the vendor path for.
    * @return The vendor path.
-   * @throws UnsupportedEncodingException if the URL decoding fails.
+   * @throws IOException if the URL decoding fails.
    */
-  public Path getVendorPathForUrl(URI url) throws UnsupportedEncodingException {
+  public Path getVendorPathForUrl(URI url) throws IOException {
     String host = url.getHost().toLowerCase(Locale.ROOT); // Host names are case-insensitive
     String path = url.getPath();
-    path = URLDecoder.decode(path, "UTF-8");
+    try {
+      path = URLDecoder.decode(path, UTF_8);
+    } catch (IllegalArgumentException e) {
+      throw new IOException("Failed to decode URL: " + e.getMessage(), e);
+    }
     if (path.startsWith("/")) {
       path = path.substring(1);
     }
